# magnet

backend/: .env  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: subnets.py
backend/app/core/: bittensor_client.py  config.py  db.py
backend/app/dev/: test_db.py  test_subtensor.py
backend/app/models/: subnet_stats.py
backend/app/schemas/: subnets.py
backend/app/worker/: sync_subnets.py
sheet-manager/: README.md  auto_refresher.py  live_subnets_data.json  main.py  pyproject.toml  sheet.js
